--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,9 @@ input {
     border-radius: 24px;  /*arredonda as bordas*/
     font-size: 20px;
     background-color: #7c7c7cec;
-    color: azure;
+    color: black;
     width: calc(100% - 100px);  /*ao diminuir ele nao ira quebrar, e como se deixasse responsivel*/
 }
-
 .time {
     color: azure;
 } 
@@ -51,7 +50,7 @@ input {
 
 h2 {
     color: azure;
-    font-size: 28px;
+    font-size: 25px;
 }
 
 .lupa {
@@ -63,7 +62,7 @@ button {
     outline: none;
     padding: 10px;
     border-radius: 50px;
-    background-color: #7c7c7c2b;
+    background-color: #7c7c7cec;
     float: right;
     cursor: pointer;
 }
